--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# I love to program.  I have a Bachelors Degree in Computer Science. I hope to improve my programmings skills by utilizing GitHub!
 # Compiled class file
 *.class
 
